src/test/deca/context/valid/ClassMathode13.deca
// Description:
//    cast class
// Resultats:
//    OK
// 
// Historique:
//    cree le 01/01/2022
class A {

}
class B extends A {

}
class C extends B{

}
{

	A a;
	B b;
    C c;
    C d;
	a=b;
	b=(B)(a);
    c=(C)(b);
    d=(C)(a);

}