src/test/deca/context/invalid/class29.deca
class A{
    int a;
} 
{
    A a=A();
    
}